# Monitor-Ambient-Lighting-Rust-Edition

./: .gitignore  Cargo.toml  README.md  notes.txt  ppmViewer.py
assets/: example_program_configuration.json  monitor_configuration.json  program_configuration.json
src/: app.rs  baudrate.rs  debugging.rs  framerate.rs  kernel.rs  main.rs  monitor_config.rs  monitor_configurer_widget.rs  program_config.rs  settings_configurer.rs  test_kernel.rs  util.rs  worker.rs
src/core/: app.rs  baudrate.rs  kernel.rs  mod.rs  monitor_config.rs  monitor_configurer.rs  monitor_configurer_widget.rs  program_config.rs  settings_configurer.rs  side.rs  worker.rs
src/util/: debugging.rs  mod.rs
